prevent home cards not showing the link

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -54,4 +54,5 @@
 .boton_card_home{
   margin: 0 auto;
   width: 100%;
+  margin-bottom: 15px;
 }
